# Search_engine

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Database/: file001.txt  file002.txt  file003.txt
Headers/: ConverterJSON.h
Json_documents/: answers.json  config.json  requests.json
Sources/: ConverterJSON.cpp  InvertedIndex.cpp  SearchServer.cpp
Tests/: google_test.cc  inverted_index_test.cc  module_test.cpp
